fix: readability: Darken default link color

--- a/_sass/open-project-base.scss
+++ b/_sass/open-project-base.scss
@@ -10,7 +10,7 @@ body {
 
 a {
   &:link, &:hover, &:visited {
-    color: $primary-color;
+    color: $primary-dark-color;
     text-decoration: none;
   }
 }
